iweb: fixing issue where footer covers page content

--- a/app/assets/stylesheets/iweb_layout.sass
+++ b/app/assets/stylesheets/iweb_layout.sass
@@ -147,7 +147,7 @@ html
 
 body
   position: relative
-  padding-bottom: 6rem
+  padding-bottom: 16rem
   min-height: 100%
 
 #footer
